# langserve-assistant-ui

backend/: pyproject.toml  requirements.txt
backend/app/: react_agent.py  server.py
frontend/: package-lock.json  package.json
frontend/app/api/graph-data/: route.ts
frontend/components/: AnalysisGraphs.tsx  AnalyzeDataToolUI.tsx  MyAssistant.tsx
version3/: .gitignore  manage.py  old.py  requirements.txt  run_django.py
version3/modelv3/: admin.py  api_key.template.py  apps.py  ml_models.py  models.py  urls.py  views.py
version3/modelv3/migrations/: 0001_initial.py  0002_anovadata.py  0003_anovaresult_pcaresult_delete_anovadata_and_more.py  0004_randomforestresult.py  0005_randomforestresult_actual_value_and_more.py  0006_meanmedianmoderesults.py  0007_anomalydetectionresult_boxplotanalysis_and_more.py
version3/version3/: asgi.py  settings.py  urls.py  wsgi.py
